test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-owned-from-oknil-unmanaged.good
init-field-dflt-oknil-owned-from-oknil-unmanaged.chpl:11: error: Cannot initialize 'owned MyClass?' from a 'unmanaged MyClass?'
